# learn_rust

Hello_World/: main  main.rs
ads_hw_10/: Cargo.toml
ads_hw_10/src/: main.rs
ads_hw_11/: Cargo.toml
ads_hw_12/: Cargo.toml
ads_hw_12/src/: lib.rs
ads_hw_13/: Cargo.toml
ads_hw_13/src/: lib.rs
ads_hw_3/: Cargo.toml
ads_hw_3/src/: lib.rs  main.rs
ads_hw_4/: Cargo.toml
ads_hw_4/src/: lib.rs  main.rs
ads_hw_5/: Cargo.toml
ads_hw_5/src/: lib.rs  main.rs
ads_hw_6/: Cargo.toml
ads_hw_6/src/: lib.rs  main.rs
ads_hw_7/: Cargo.toml
ads_hw_7/src/: lib.rs  main.rs
ads_hw_8/: Cargo.toml
ads_hw_8/src/: lib.rs
ads_hw_9/: Cargo.toml
ads_hw_9/src/: lib.rs
borrow_shit/: Cargo.toml
borrow_shit/src/: main.rs
io_test/: Cargo.toml
io_test/src/: main.rs
thesis_snippets/: time_problem.md
thesis_snippets/app/src/: main.rs
thesis_snippets/embedded_hal_impl/: Cargo.toml
thesis_snippets/interrupt_problem/: interrupt_problem.md
thesis_snippets/interrupt_problem/globals/: Cargo.toml
thesis_snippets/interrupt_problem/globals/src/: main.rs
thesis_snippets/interrupt_problem/interrupts/: Cargo.toml
thesis_snippets/interrupt_problem/interrupts/src/: main.rs
thesis_snippets/time_problem/: time_problem.md
thesis_snippets/time_problem/app/: Cargo.toml
thesis_snippets/time_problem/embedded_hal_declaration/: Cargo.toml
thesis_snippets/time_problem/embedded_hal_declaration/src/: lib.rs
thesis_snippets/time_problem/embedded_hal_impl/src/: lib.rs
thesis_snippets/time_problem/time_lib/: Cargo.toml
(+1 files in other folders)
